# aisat-intel

./: .gitignore  Makefile  README.md
.github/hooks/: track-env.base.sh  track-reconcile.sh  track-report.sh
.github/instructions/: go.instructions.md
.github/skills/excalidraw-diagram-generator/: SKILL.md
.github/skills/excalidraw-diagram-generator/templates/: class-diagram-template.excalidraw  data-flow-diagram-template.excalidraw  er-diagram-template.excalidraw  mindmap-template.excalidraw
.github/skills/notion-sync/: SKILL.md
.github/skills/notion-sync/references/: workflow.md
.github/skills/notion-sync/scripts/: setup_notion_db.py  setup_notion_views.py  sync_tasks.py
.github/skills/single-branch-development/: SKILL.md
.github/skills/single-branch-development/references/: hooks.md  refactor-mode.md  scaffold-mode.md  story-mode.md
.github/skills/single-branch-development/scripts/: track-guard.sh  track-preflight.sh  track-reconcile.sh
.github/skills/single-branch-development/tests/: test-skill.sh
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.stitch/designs/: admin.html  agents.html  chat.html  credits.html  library.html  workspace.html
backend-go/: .golangci.yml  go.mod
backend-go/cmd/api/: main.go
backend-go/tests/containers/: containers.go
backend-python/: pyproject.toml
backend-python/src/: main.py
backend-python/tests/: conftest.py
deploy/: .env.example  Caddyfile  docker-compose.yml
design-system/aisat-studio/pages/: chat.md
frontend/: .eslintrc.cjs  .prettierrc  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/tests/e2e/: playwright.config.ts
specs/: draft-plan.md
specs/001-contextengine-mvp/: billing-payments-design.md  data-model.md  phase-4-scalability-hardening.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-contextengine-mvp/contracts/: README.md  bff-rest.md  llm-gateway.md  mcp-tools.md  nats-subjects.md  sse-events.md
specs/001-contextengine-mvp/diagrams/: credit-metering-swimlane.excalidraw  data-model-er.excalidraw  ingestion-pipeline.excalidraw  langgraph-rag-agent.excalidraw  query-path-dfd.excalidraw  system-architecture.excalidraw
specs/001-contextengine-mvp/diagrams/addition/: billing-payment-flow.excalidraw
