[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisat-studio-backend"
version = "0.1.0"
description = "AISAT Studio backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "langgraph>=0.0.39",
    "mem0ai>=0.0.9",
    "baml-py>=0.32.0",
    "fastmcp>=0.5.0",
    "markitdown>=0.0.7",
    "crawl4ai>=0.3.0",
    "qdrant-client>=1.7.0",
    "openai>=1.3.0",
    "cohere>=5.0.0",
    "structlog>=23.2.0",
    "langfuse>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "testcontainers>=3.7.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]
