[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisat-studio-backend"
version = "0.1.0"
description = "AISAT Studio Backend - AI-powered shared second brain"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AISAT Studio", email = "hello@aisat.io"}
]
keywords = ["ai", "rag", "langgraph", "backend"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "mem0ai>=0.1.0",
    "baml-py>=0.81.0",
    "fastmcp>=2.0.0",
    "markitdown>=0.0.1",
    "crawl4ai>=0.4.0",
    "qdrant-client>=1.12.0",
    "openai>=1.55.0",
    "cohere>=5.11.0",
    "structlog>=24.4.0",
    "langfuse>=2.55.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "nats-py>=2.9.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]

[tool.uv]
managed = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=0"

[tool.hatch.build.targets.wheel]
packages = ["src"]
